# calendly-mcp-server

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.mcp/: server.json
examples/: claude-desktop-config.json  usage-examples.md
src/calendly_mcp/: __init__.py  __main__.py  auth.py  config.py  server.py
src/calendly_mcp/client/: __init__.py  calendly_api.py
src/calendly_mcp/tools/: __init__.py  analytics.py  availability.py  event_types.py  events.py  scheduling.py
src/calendly_mcp/utils/: __init__.py  formatting.py  license.py
tests/: conftest.py  test_availability.py  test_events.py  test_scheduling.py
